--- a/index.html
+++ b/index.html
@@ -14,83 +14,132 @@
 
     <nav id="navbar">
         <a href="#about" class="nav-link active">About Me</a>
-        <a href="#skills" class="nav-link">Skills</a>
-        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#skills-section" class="nav-link">Skills</a>
+        <a href="#project-section" class="nav-link">Projects</a>
         <a href="#contact" class="nav-link">Contact</a>
     </nav>
 
     <div id="about" class="container about-section">
         <div class="about-text">
-            <h1 class="section-title typewriter">Hi, I'm Nisha Ahmad</h1>
+            <h1 class="section-title typewriter">Hi, I'm Nisha Ahmad</span></h1>
             <p class="animated-text">
                 I'm a pre-final year B.Tech student passionate about software development, UI/UX, and solving real-world problems.
                 I love building meaningful projects that can create impact and value.
             </p>
             <a href="https://drive.google.com/file/d/10p074qwckVaKD4X_aPvAKs6TQTXaCajk/view?usp=sharing" target="_blank" class="resume-button">View Resume</a>
-        </div>
+        </div> 
         <div class="about-image">
             <img src="girl.png" alt="Animated Girl Saying Hi" class="animated-girl">
         </div>
     </div>
 
-     <div id="skills" class="container white-background">
-    <h2 class="section-title">My Skills</h2>
-
-    <div class="skills-box">
-        <button id="prevBtn" class="slider-btn">&#10094;</button>
-
-        <div class="skills-slider" id="skillsSlider">
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="90">
-                    <span>90%</span>
-                </div>
-                <p>C++</p>
-            </div>
-
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="85">
-                    <span>85%</span>
-                </div>
-                <p>React.js</p>
-            </div>
-
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="80">
-                    <span>80%</span>
-                </div>
-                <p>UI/UX Design</p>
-            </div>
-
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="75">
-                    <span>75%</span>
-                </div>
-                <p>SQL</p>
-            </div>
-
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="70">
-                    <span>70%</span>
-                </div>
-                <p>Java</p>
-            </div>
-
-            <div class="skill-item">
-                <div class="progress-circle" data-progress="85">
-                    <span>85%</span>
-                </div>
-                <p>HTML/CSS</p>
-            </div>
+ <div id="skills-section" class="container">
+        <h1>My <span class="spanclass">Skills</span></h1>
+        <div class="buttons">
+            <button onclick="filterSkills('all')">All</button>
+            <button onclick="filterSkills('frontend')">Frontend</button>
+            <button onclick="filterSkills('backend')">Backend</button>
+            <button onclick="filterSkills('tools')">Tools</button>
         </div>
 
-        <button id="nextBtn" class="slider-btn">&#10095;</button>
-    </div>
-</div>
+        <div class="skills" id="skills">
+            <div class="skill frontend">
+                <div class="skill-name">HTML/CSS</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 95%;"></div>
+                </div>
+            </div>
+            <div class="skill frontend">
+                <div class="skill-name">JavaScript</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 70%;"></div>
+                </div>
+            </div>
+            <div class="skill frontend">
+                <div class="skill-name">React.js</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill backend">
+                <div class="skill-name">Python</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 60%;"></div>
+                </div>
+            </div>
+            <div class="skill frontend">
+                <div class="skill-name">Tailwind CSS</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill frontend">
+                <div class="skill-name">Next.js</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 80%;"></div>
+                </div>
+            </div>
 
-   
-        
+            <div class="skill backend">
+                <div class="skill-name">Node.js</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="skill backend">
+                <div class="skill-name">Express</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 75%;"></div>
+                </div>
+            </div>
+            <div class="skill backend">
+                <div class="skill-name">MongoDB</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 70%;"></div>
+                </div>
+            </div>
+            <div class="skill backend">
+                <div class="skill-name">SQL</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 65%;"></div>
+                </div>
+            </div>
+            <div class="skill tools">
+                <div class="skill-name">Canva</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 60%;"></div>
+                </div>
+            </div>
+
+            <div class="skill tools">
+                <div class="skill-name">Git/GitHub</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill backend">
+                <div class="skill-name">C++</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 65%;"></div>
+                </div>
+            </div>
+            <div class="skill tools">
+                <div class="skill-name">Figma</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="skill tools">
+                <div class="skill-name">VS Code</div>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 95%;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+  
     
-<div class="project-section">
+<div id="project-section" class="project-section">
     <h2 class="section-title">Featured <span class="spanclass">Projects</span></h2>
     <p class="contact-text">
           Here are some of my recent projects. Each project was carefully crafted with attention to
