--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="skill frontend">
                 <div class="skill-name">React.js</div>
                 <div class="skill-bar">
-                    <div class="skill-fill" style="width: 90%;"></div>
+                    <div class="skill-fill" style="width: 70%;"></div>
                 </div>
             </div>
             <div class="skill backend">
@@ -70,7 +70,7 @@
             <div class="skill frontend">
                 <div class="skill-name">Tailwind CSS</div>
                 <div class="skill-bar">
-                    <div class="skill-fill" style="width: 90%;"></div>
+                    <div class="skill-fill" style="width: 70%;"></div>
                 </div>
             </div>
             <div class="skill frontend">
@@ -172,10 +172,10 @@
             <p>GLB.Connect a dynamic platform designed to bridge the gap between juniors and seniors for guidance It offers real-time sessions, Q&A threads, and a supportive community to foster meaningful connections.</p>
             <div class="tech-stack"> React Node.js PostgreSQL</div>
             <div class="project-buttons">
-                <a href="https://nahmad231.github.io/GLB.Connect/" target="_blank" class="pic">
+                <a href="https://glb-connect.vercel.app/" target="_blank" class="pic">
                     <img src="external-link.png" alt="Description" width="30" height="30">
                 </a>
-                <a href="https://github.com/NAhmad231/GLB.Connect?tab=readme-ov-file" target="_blank" class="pic">
+                <a href="https://github.com/NAhmad231/glbconnect" target="_blank" class="pic">
                     <img src="Github.png" alt="Description" width="30" height="30">
                 </a>
             </div>
